fix(security): unificar configuración de CORS y corregir manejo de preflight
- Se eliminó el bean CorsFilter manual para evitar duplicación de encabezados.
- Se simplificó corsConfigurationSource para permitir todos los encabezados con '*'.
- Se actualizó JwtFilter para responder 200 OK inmediatamente a peticiones OPTIONS.
- Se agregó permitAll explícito para métodos OPTIONS en la cadena de seguridad.